# vdns

./: Cargo.toml  Dockerfile
.github/workflows/: docker.yml
deployment/default/: kustomization.yml
deployment/default/vdns/: config.env  deployment.yaml  service.yaml
src/: app.rs  authority.rs  dns.rs  main.rs  opt.rs  plugin.rs  tls.rs  utils.rs
src/observability/: config.rs  metrics.rs  mod.rs  resource.rs  tracing.rs
src/plugins/: cache.rs  forward.rs  hosts.rs  mod.rs
src/types/: mod.rs  rule.rs
test/: cert_request.csr  certificate.pem  private_key.pem
