[package]
name = "vdns"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vdns"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

rustls = { version = "0.21", features = ["default"] }
rustls-pemfile = "1.0.4"
hickory-resolver = { version = "0.25.0-alpha.1", features = ["dns-over-h3", "dns-over-quic", "dns-over-rustls", "dns-over-https-rustls"] }
hickory-server = { version = "0.25.0-alpha.1", features = ["dns-over-h3", "dns-over-quic", "dns-over-rustls", "dns-over-https-rustls"] }
