[package]
name = "vdns"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "vdns"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
envy = "0.4.2"
config = { version = "0.14.0", features = ["async"] }
async-trait = "0.1.81"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = { version = "0.24" }
opentelemetry = { version = "0.23", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.16", features = ["trace", "metrics", "grpc-tonic", "http-proto"] }
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
opentelemetry-http = { version = "0.13", features = ["reqwest-rustls"] }
opentelemetry-semantic-conventions = "0.16"
metrics = "0.23.0"
metrics-tracing-context = "0.16.0"
metrics-exporter-prometheus = { version = "0.15.3", default-features = false, features = ["http-listener"] }
metrics-util = "0.17.0"

rustls = { version = "0.21", features = ["default"] }
rustls-pemfile = "1.0.4"
hickory-resolver = { version = "0.25.0-alpha.1", features = ["dns-over-h3", "dns-over-quic", "dns-over-rustls", "dns-over-https-rustls"] }
hickory-server = { version = "0.25.0-alpha.1", features = ["dns-over-h3", "dns-over-quic", "dns-over-rustls", "dns-over-https-rustls"] }
